# smartallocPY

./: .env.example  .gitignore  CHANGELOG.md  Makefile  README.md  README_CI.md  assign_counter.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 20240315_01_create_counter_tables.py
data/: backfill_dry_run_sample.csv  backfill_sample.csv
data/config/: crosswalk.json  manager_centers.json
docs/: TODOs_phase2.md
docs/dashboard/: counter_dashboard.json
docs/dashboard/alerts/: counter_alerts.yaml
reports/: spec_matrix.md
scripts/: backfill_counters.py  generate_spec_matrix.py  post_migration_checks.py  serve_metrics.py
src/: __init__.py
src/api/: __init__.py  counter_api.py  main.py
src/api/endpoints/: __init__.py  allocation.py  health.py
src/config/: __init__.py  counter.py  database.py  logging_config.py  settings.py
src/core/: import_to_sabt.py  special_schools.py
src/core/models/: __init__.py  assignment.py  constants.py  manager.py  mentor.py  mentor_legacy_helpers.py  mentor_phase1.py  school.py  shared_normalize.py  student.py
src/core/services/: __init__.py  allocation_service.py  counter_service.py  import_service.py  validation_service.py
src/core/utils/: __init__.py  crosswalk_mapper.py  excel_handler.py  mobile_normalizer.py  normalization.py  persian_normalizer.py
src/domain/counter/: __init__.py  ports.py  service.py
src/infrastructure/counter/: backfill.py  metrics.py  postgres_repo.py  year_provider.py
tests/: __init__.py  conftest.py  test_exporter_golden.py  test_models.py  test_smoke_e2e.py
tests/counter/: conftest.py  test_api.py  test_backfill.py  test_cli_modules.py  test_docs_assets.py  test_fault_injection.py  test_metrics.py  test_ports.py  test_post_migration_checks.py  test_property_based.py  test_repository.py  test_service_errors.py  test_service_integration.py  test_service_unit.py  test_service_validation.py  test_year_provider.py
tests/integration/: test_allocation_flow.py
tests/unit/: test_counter_service.py  test_imports_compat.py  test_mentor_encoder_and_aliases.py  test_mentor_helpers.py  test_mentor_model.py  test_mentor_phase1_encoder_and_aliases.py  test_mobile_normalizer.py  test_models.py  test_services.py  test_smoke_imports.py  test_student_model_validations.py  test_utils.py
tests/utils/: __init__.py  special_schools_testtools.py
tools/: run_tests.py  setup_ci.py
