[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "student-allocation-system"
version = "0.1.1"
description = "Student to mentor allocation system"
authors = [
  { name = "Student Allocation Team", email = "team@example.com" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pandas",
  "openpyxl",
  "pydantic>=2",
  "pydantic-settings",
  "fastapi",
  "sqlalchemy",
  "uvicorn",
  "python-dotenv",
  "email-validator",
  "persiantools"
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "httpx",
  "bandit",
  "ruff"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q --cov=src/core/models/mentor.py --cov-report=term-missing --cov-fail-under=90"
testpaths = ["tests"]
