[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smartalloc"
version = "0.1.0"
description = "Smart allocation system"
readme = "README.md"
authors = [
  { name = "Smart Alloc Team", email = "team@example.com" }
]
license = { text = "MIT" }
dependencies = [
  "pydantic>=2.0",
  "pydantic[email]",
  "pytest",
  "pytest-cov"
]
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q --cov=src.core.models.mentor --cov-report=term-missing --cov-fail-under=90"
testpaths = ["tests"]
